--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,5 +29,8 @@ Metrics/MethodLength:
 Metrics/LineLength:
   Enabled: false
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Metrics/ParameterLists:
   Max: 6
